Refactor logo image and CSS styles

--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
     <div class="header-container container">
       <header class="header">
         <div class="logo-text-container">
-          <img
-            src="icons/speech-bubble.png"
-            alt="Image of the logo"
-            class="logo-img"
-            width="512"
-            height="512"
-          />
+          <div class="logo-img-container">
+            <img
+              src="icons/comment.png"
+              alt="Image of the logo"
+              class="logo-img"
+              width="512"
+              height="512"
+            />
+          </div>
+
           <h1 class="header-text">Today I Learned</h1>
         </div>
         <button class="btn btn-gradient btn-main">Share A Fact</button>
@@ -153,11 +156,12 @@
         </section>
       </main>
     </div>
-    <footer>
+
+    <footer class="container">
       <a
-        href="https://www.flaticon.com/free-icons/message"
-        title="message icons"
-        >Message icons created by Freepik - Flaticon</a
+        href="https://www.flaticon.com/free-icons/comment"
+        title="comment icons"
+        >Comment icons created by Freepik - Flaticon</a
       >
     </footer>
   </body>
