--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </header>
     </div>
     <div class="container">
-      <form action="#" class="fact-form">
+      <form action="#" class="fact-form hidden">
         <input
           type="text"
           name="fact"
@@ -164,5 +164,6 @@
         >Comment icons created by Freepik - Flaticon</a
       >
     </footer>
+    <script src="script.js" defer></script>
   </body>
 </html>
